--- a/pages/stylesheets/style.css
+++ b/pages/stylesheets/style.css
@@ -149,6 +149,14 @@ pre {
   width: 2px;
 }
 
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .nav-bar {
   display: flex;
   flex-direction: column;
@@ -187,48 +195,4 @@ pre {
   border: solid rgba(var(--text), 0.2) 1px;
   background: none;
   color: rgba(var(--text));
-}
-
-.container {
-  display: flex;
-  background-color: rgba(var(--background_light), 0.5);
-  border-radius: 0.5rem;
-  justify-content: space-between;
-}
-
-.container-items {
-  display: flex;
-  flex-direction: row;
-  padding: 1rem;
-  gap: 1rem;
-  align-items: center;
-}
-
-.container.vertical {
-  flex-direction: column;
-}
-
-.container p {
-  vertical-align: middle;
-}
-
-.containers {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
-  width: 100%;
-  height: 100%;
-}
-
-.containers.center {
-  align-items: center;
-  justify-content: center;
-}
-
-#status {
-  height: 0.5rem;
-  width: 0.5rem;
-  background: red;
-  border-radius: 50%;
 }
