--- a/modules/html-modules/containers.pug
+++ b/modules/html-modules/containers.pug
@@ -1,10 +1,10 @@
 
 .container
     .container-items
-        div /server
+        div /containerr
         button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='bb90f6950d09fa41253b2420c7f43a08502cbe0b8d4253874206fca421c222c9', onclick='containerReq(this.id)') Stop
-        button.containerReq.start(id='bb90f6950d09fa41253b2420c7f43a08502cbe0b8d4253874206fca421c222c9', onclick='containerReq(this.id)') Start
+        button.containerReq.stop(id='4611cedb49c0e7dbf16eb51fb91762811fd04e59207728cd827df7571d6c883c', onclick='containerReq(this.id)') Stop
+        button.containerReq.start(id='4611cedb49c0e7dbf16eb51fb91762811fd04e59207728cd827df7571d6c883c', onclick='containerReq(this.id)') Start
         p#res Waiting for server...
     .container-items
         #status running
@@ -17,15 +17,6 @@
         p#res Waiting for server...
     .container-items
         #status created
-.container
-    .container-items
-        div /serverexample
-        button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='da29364ba43d0f51d7275fdc99086f7d99b44a3ea0ec0b9671f365a691eb3bf7', onclick='containerReq(this.id)') Stop
-        button.containerReq.start(id='da29364ba43d0f51d7275fdc99086f7d99b44a3ea0ec0b9671f365a691eb3bf7', onclick='containerReq(this.id)') Start
-        p#res Waiting for server...
-    .container-items
-        #status running
 .container
     .container-items
         div /containe
