Finish start and stop functionality

--- a/modules/html-modules/containers.pug
+++ b/modules/html-modules/containers.pug
@@ -1,28 +1,19 @@
 
 .container
     .container-items
-        div /containerr
+        div /contain
         button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='4611cedb49c0e7dbf16eb51fb91762811fd04e59207728cd827df7571d6c883c', onclick='containerReq(this.id)') Stop
-        button.containerReq.start(id='4611cedb49c0e7dbf16eb51fb91762811fd04e59207728cd827df7571d6c883c', onclick='containerReq(this.id)') Start
+        button.containerReq.stop(id='bec1eb30c0800ab8fdce05157209ae922b6733277a5a5b97c53d67c6324c70c1', onclick='containerReq(this.classList[1], this.id)') Stop
+        button.containerReq.start(id='bec1eb30c0800ab8fdce05157209ae922b6733277a5a5b97c53d67c6324c70c1', onclick='containerReq(this.classList[1], this.id)') Start
         p#res Waiting for server...
     .container-items
-        #status running
-.container
-    .container-items
-        div /abc
-        button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='3f65d3b2953f5817014cbfaea6febca091cb28aa7c0debfa6953801cb2c962dc', onclick='containerReq(this.id)') Stop
-        button.containerReq.start(id='3f65d3b2953f5817014cbfaea6febca091cb28aa7c0debfa6953801cb2c962dc', onclick='containerReq(this.id)') Start
-        p#res Waiting for server...
-    .container-items
-        #status created
+        #status exited
 .container
     .container-items
         div /containe
         button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='d284cbc22e325b2f4221bfa66696e37a06e499e9e6cb1518dd51ae29fc4334a5', onclick='containerReq(this.id)') Stop
-        button.containerReq.start(id='d284cbc22e325b2f4221bfa66696e37a06e499e9e6cb1518dd51ae29fc4334a5', onclick='containerReq(this.id)') Start
+        button.containerReq.stop(id='d284cbc22e325b2f4221bfa66696e37a06e499e9e6cb1518dd51ae29fc4334a5', onclick='containerReq(this.classList[1], this.id)') Stop
+        button.containerReq.start(id='d284cbc22e325b2f4221bfa66696e37a06e499e9e6cb1518dd51ae29fc4334a5', onclick='containerReq(this.classList[1], this.id)') Start
         p#res Waiting for server...
     .container-items
         #status created
@@ -30,8 +21,8 @@
     .container-items
         div /la
         button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='22fb6ce7e59d6597b99b0f869207a2efd8b4f3f547a302e9bb2bae5e3d980177', onclick='containerReq(this.id)') Stop
-        button.containerReq.start(id='22fb6ce7e59d6597b99b0f869207a2efd8b4f3f547a302e9bb2bae5e3d980177', onclick='containerReq(this.id)') Start
+        button.containerReq.stop(id='22fb6ce7e59d6597b99b0f869207a2efd8b4f3f547a302e9bb2bae5e3d980177', onclick='containerReq(this.classList[1], this.id)') Stop
+        button.containerReq.start(id='22fb6ce7e59d6597b99b0f869207a2efd8b4f3f547a302e9bb2bae5e3d980177', onclick='containerReq(this.classList[1], this.id)') Start
         p#res Waiting for server...
     .container-items
         #status created
@@ -39,8 +30,8 @@
     .container-items
         div /con
         button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='71a93d64cf298d5bc4ed4354bb818a4a55e6ff375999877fb85313979d6c53d4', onclick='containerReq(this.id)') Stop
-        button.containerReq.start(id='71a93d64cf298d5bc4ed4354bb818a4a55e6ff375999877fb85313979d6c53d4', onclick='containerReq(this.id)') Start
+        button.containerReq.stop(id='71a93d64cf298d5bc4ed4354bb818a4a55e6ff375999877fb85313979d6c53d4', onclick='containerReq(this.classList[1], this.id)') Stop
+        button.containerReq.start(id='71a93d64cf298d5bc4ed4354bb818a4a55e6ff375999877fb85313979d6c53d4', onclick='containerReq(this.classList[1], this.id)') Start
         p#res Waiting for server...
     .container-items
         #status created
