--- a/modules/html-modules/containers.pug
+++ b/modules/html-modules/containers.pug
@@ -1,37 +1,57 @@
 
 .container
-    .container-items
-        div /contain
-        button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='bec1eb30c0800ab8fdce05157209ae922b6733277a5a5b97c53d67c6324c70c1', onclick='containerReq(this.classList[1], this.id)') Stop
-        button.containerReq.start(id='bec1eb30c0800ab8fdce05157209ae922b6733277a5a5b97c53d67c6324c70c1', onclick='containerReq(this.classList[1], this.id)') Start
-        p#res Waiting for server...
-    .container-items
-        #status exited
+            .container-items
+              .name /contain
+              button.containerReq(id="", onclick="") Edit
+              button.containerReq.stop(id="bec1eb30c0800ab8fdce05157209ae922b6733277a5a5b97c53d67c6324c70c1",
+                onclick="containerReq(this.classList[1], this.id)"
+              ) Stop
+              button.containerReq.start(id="bec1eb30c0800ab8fdce05157209ae922b6733277a5a5b97c53d67c6324c70c1",
+                onclick="containerReq(this.classList[1], this.id)"
+              ) Start
+            .container-items
+              p#res Waiting for server...
+            .container-items
+              #status 
 .container
-    .container-items
-        div /containe
-        button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='d284cbc22e325b2f4221bfa66696e37a06e499e9e6cb1518dd51ae29fc4334a5', onclick='containerReq(this.classList[1], this.id)') Stop
-        button.containerReq.start(id='d284cbc22e325b2f4221bfa66696e37a06e499e9e6cb1518dd51ae29fc4334a5', onclick='containerReq(this.classList[1], this.id)') Start
-        p#res Waiting for server...
-    .container-items
-        #status created
+            .container-items
+              .name /containe
+              button.containerReq(id="", onclick="") Edit
+              button.containerReq.stop(id="d284cbc22e325b2f4221bfa66696e37a06e499e9e6cb1518dd51ae29fc4334a5",
+                onclick="containerReq(this.classList[1], this.id)"
+              ) Stop
+              button.containerReq.start(id="d284cbc22e325b2f4221bfa66696e37a06e499e9e6cb1518dd51ae29fc4334a5",
+                onclick="containerReq(this.classList[1], this.id)"
+              ) Start
+            .container-items
+              p#res Waiting for server...
+            .container-items
+              #status 
 .container
-    .container-items
-        div /la
-        button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='22fb6ce7e59d6597b99b0f869207a2efd8b4f3f547a302e9bb2bae5e3d980177', onclick='containerReq(this.classList[1], this.id)') Stop
-        button.containerReq.start(id='22fb6ce7e59d6597b99b0f869207a2efd8b4f3f547a302e9bb2bae5e3d980177', onclick='containerReq(this.classList[1], this.id)') Start
-        p#res Waiting for server...
-    .container-items
-        #status created
+            .container-items
+              .name /la
+              button.containerReq(id="", onclick="") Edit
+              button.containerReq.stop(id="22fb6ce7e59d6597b99b0f869207a2efd8b4f3f547a302e9bb2bae5e3d980177",
+                onclick="containerReq(this.classList[1], this.id)"
+              ) Stop
+              button.containerReq.start(id="22fb6ce7e59d6597b99b0f869207a2efd8b4f3f547a302e9bb2bae5e3d980177",
+                onclick="containerReq(this.classList[1], this.id)"
+              ) Start
+            .container-items
+              p#res Waiting for server...
+            .container-items
+              #status 
 .container
-    .container-items
-        div /con
-        button.containerReq(id='', onclick='') Edit
-        button.containerReq.stop(id='71a93d64cf298d5bc4ed4354bb818a4a55e6ff375999877fb85313979d6c53d4', onclick='containerReq(this.classList[1], this.id)') Stop
-        button.containerReq.start(id='71a93d64cf298d5bc4ed4354bb818a4a55e6ff375999877fb85313979d6c53d4', onclick='containerReq(this.classList[1], this.id)') Start
-        p#res Waiting for server...
-    .container-items
-        #status created
+            .container-items
+              .name /con
+              button.containerReq(id="", onclick="") Edit
+              button.containerReq.stop(id="71a93d64cf298d5bc4ed4354bb818a4a55e6ff375999877fb85313979d6c53d4",
+                onclick="containerReq(this.classList[1], this.id)"
+              ) Stop
+              button.containerReq.start(id="71a93d64cf298d5bc4ed4354bb818a4a55e6ff375999877fb85313979d6c53d4",
+                onclick="containerReq(this.classList[1], this.id)"
+              ) Start
+            .container-items
+              p#res Waiting for server...
+            .container-items
+              #status 
