--- a/pages/panel.pug
+++ b/pages/panel.pug
@@ -44,4 +44,15 @@ html
       .nav-links.top
         p System Usage
     .containers
+      .container
+        .container-items
+          p Name
+        .container-items
+          p Image
+        .container-items
+          p Directory
+        .container-items
+          p Usage
+        .container-items
+          p \o/
       include ../modules/html-modules/containers.pug
