--- a/pages/stylesheets/panel.css
+++ b/pages/stylesheets/panel.css
@@ -1,95 +1,135 @@
 @import "style.css";
   
 .containerReq {
-    border-radius: 0.25rem;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    border: solid rgba(var(--text), 0.2) 1px;
-    background: none;
-    color: rgba(var(--text));
-  }
-  
-  .container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 30% 23% 23% 23% 5%;
-    background: rgba(var(--background), 1);
-    border: solid rgba(var(--outline), 0.2) 1px;
-    border-radius: 0.5rem;
-    justify-items: start;
-    padding: 1rem 2rem 1rem 1rem;
-  }
-  
-  .container-items {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    align-items: center;
-    overflow-x: scroll;
-    text-wrap: nowrap;
-  }
-  
-  .container-items::-webkit-scrollbar {
+  border-radius: 0.25rem;
+  padding: 0.3rem 0.5rem;
+  border: solid rgba(var(--outline), 0.2) 1px;
+  background: none;
+  color: rgba(var(--text));
+}
+
+.container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 24.75% 24.75% 24.75% 24.75% 1%;
+  background: rgba(var(--background), 1);
+  border: solid rgba(var(--outline), 0.2) 1px;
+  border-radius: 0.5rem;
+  justify-items: start;
+  padding: 1rem 2rem 1rem 1rem;
+}
+
+.container-items {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+  overflow-x: scroll;
+  text-wrap: nowrap;
+}
+
+.container-items::-webkit-scrollbar {
+  display: none;
+}
+
+.container-items.directory {
+  color: rgba(var(--text), 0.8);
+  width: 69%;
+  background: rgba(var(--background_dark), 0.5);
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  align-self: center;
+}
+
+.container-items.image {
+  width: 80%;
+}
+
+.container p {
+  vertical-align: middle;
+}
+
+.containers {
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  gap: 1rem;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.status {
+  margin: 0.5rem;
+  height: 0.5rem;
+  width: 0.5rem;
+  border-radius: 50%;
+}
+
+.status.on {
+  background: var(--on);
+  box-shadow: 0px 0px 10px 0px var(--on);
+}
+
+.status.off {
+  background: var(--off);
+  box-shadow: 0px 0px 10px 0px var(--off);
+}
+
+.name {
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  //border: solid rgba(var(--text), 0.2) 1px;
+  background: rgba(var(--background_light), 0.8);
+  color: rgba(var(--text));
+}
+
+.name:after {
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  background: none;
+  display: none;
+}
+
+.run {
+  fill: rgba(var(--text), 1);
+  height: 0.6rem;
+  width: 0.6rem;
+}
+
+.name-cont {
+  width: 6rem;
+  overflow-x: scroll;
+}
+
+.name-cont::-webkit-scrollbar {
+  display: none;
+}
+
+@media only screen and (max-width: 1100px) {
+  div.container-items:nth-child(3) {
     display: none;
   }
-  
-  .container-items.directory {
-    color: rgba(var(--text), 0.8);
-    width: 80%;
-    background: rgba(var(--background_dark), 0.5);
-    border-radius: 0.25rem;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    align-self: center;
+  div.container-items:nth-child(4) {
+    display: none;
   }
-  
-  .container-items.image {
-    width: 80%;
+  .container {
+    grid-template-columns: 49.5% 49.5% 1%;
   }
-  
-  .container p {
-    vertical-align: middle;
+}
+
+@media only screen and (max-width: 500px) {
+  div.container-items:nth-child(2) {
+    display: none;
   }
-  
-  .containers {
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    gap: 1rem;
-    padding: 1rem;
-    width: 100%;
-    height: 100%;
+  div.container-items:nth-child(3) {
+    display: none;
   }
-  
-  .status {
-    margin: 0.5rem;
-    height: 0.5rem;
-    width: 0.5rem;
-    border-radius: 50%;
+  div.container-items:nth-child(4) {
+    display: none;
   }
-  
-  .status.on {
-    background: var(--on);
-    box-shadow: 0px 0px 10px 0px var(--on);
+  .container {
+    grid-template-columns: 99% 1%;
   }
-  
-  .status.off {
-    background: var(--off);
-    box-shadow: 0px 0px 10px 0px var(--off);
-  }
-  
-  .name {
-    font-size: 0.9rem;
-    border-radius: 0.25rem;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    background: rgba(var(--background_light), 0.8);
-    color: rgba(var(--text));
-  }
-  
-  @media only screen and (max-width: 1100px) {
-    .container {
-      grid-template-columns: none;
-    }
-    .container-items.ports {
-      background: none;
-    }
-  }
-  
+}
