--- a/pages/stylesheets/style.css
+++ b/pages/stylesheets/style.css
@@ -8,6 +8,9 @@
   --primary: 200, 182, 255;
   --secondary: 255, 214, 255;
   --accent: 187, 208, 255;
+  --on: #60f79d;
+  --off: #f08080;
+  --outline: 161, 164, 199;
 }
 
 * {
@@ -71,8 +74,12 @@ a {
   cursor: pointer;
 }
 
+p {
+  font-size: 0.85rem;
+}
+
 button {
-  font-size: 0.8rem;
+  font-size: 0.75rem;
   cursor: pointer;
   font-family: "Azeret Mono";
 }
@@ -155,38 +162,49 @@ pre {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: rgba(var(--background_dark), 1);
   width: 100%;
   height: 100vh;
 }
 
 .nav-bar {
   display: flex;
-  padding: 1rem;
   justify-content: space-between;
   text-align: left;
-  background-color: rgba(var(--background), 1);
-  outline: 1px solid rgba(var(--text), 0.2);
+  background: rgba(var(--background_dark), 1);
+  outline: 1px solid rgba(var(--outline), 0.2);
   z-index: 1;
 }
 
 .nav-bar.side {
+  padding: 1rem;
   flex-direction: column;
   height: 100vh;
   z-index: 2;
 }
 
 .nav-bar.top {
-  flex-direction: row;
+  display: grid;
   width: 100%;
+  padding: 1rem 0rem 1rem 1rem;
+  grid-template-columns: 30% 21.66% 21.66% 21.66% 5%;
 }
 
 .nav-links {
   display: flex;
-  flex-direction: column;
   gap: 1rem;
+}
+
+.nav-links.side {
+  flex-direction: column;
   height: 1.5rem;
   width: 1.5rem;
   fill: rgba(var(--text), 1);
+}
+
+.nav-links.top {
+  flex-direction: row;
+  justify-items: start;
 }
 
 .nav-button {
@@ -194,8 +212,16 @@ pre {
   border: none;
 }
 
-.menu {
+.fill {
   fill: rgba(var(--text), 1);
   height: 1.5rem;
   width: 1.5rem;
+}
+
+.containerReq {
+  border-radius: 0.25rem;
+  padding: 0.3rem 0.5rem;
+  border: solid rgba(var(--outline), 0.2) 1px;
+  background: none;
+  color: rgba(var(--text));
 }
