--- a/modules/html-modules/containers.pug
+++ b/modules/html-modules/containers.pug
@@ -14,7 +14,7 @@
             .container-items.directory
               p undefined
             .container-items.usage
-              p RAM: 15%
-              p CPU: 23%
+              p RAM: 1
+              p CPU: 1
             .container-items
               .status.running
