--- a/pages/panel.pug
+++ b/pages/panel.pug
@@ -4,6 +4,7 @@ html
     script(type="application/javascript", src="scripts/containerFunctions.js")
     link(rel="stylesheet", href="stylesheets/panel.css")
   body
+    toasts
     .nav-bar.side
       .nav-links.side
         a(href="/home")
