--- a/client/src/index.css
+++ b/client/src/index.css
@@ -227,7 +227,7 @@ glob {
 }
 
 .muted {
-  color: var(--text_dark) !important;
+  color: var(--text_dark);
 }
 
 .bold {
@@ -238,7 +238,7 @@ glob {
   text-decoration: underline;
 }
 
-.nav h5 {
+.gradient-text {
   background: linear-gradient(126deg, var(--accent), var(--primary));
   background-clip: text;
   -webkit-background-clip: text;
@@ -253,12 +253,12 @@ glob {
   color: var(--primary);
 }
 
-.on {
+.running {
   fill: var(--on);
   filter: drop-shadow(0px 0px 10px 0px var(--on));
 }
 
-.off {
+.exited {
   fill: var(--text_dark);
   filter: drop-shadow(0px 0px 10px 0px var(--off));
 }
